; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/extr_composite.c_encode_bMaxPower.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/extr_composite.c_encode_bMaxPower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_configuration = type { i32 }

@CONFIG_USB_GADGET_VBUS_DRAW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.usb_configuration*)* @encode_bMaxPower to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encode_bMaxPower(i32 %0, %struct.usb_configuration* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.usb_configuration*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.usb_configuration* %1, %struct.usb_configuration** %5, align 8
  %7 = load %struct.usb_configuration*, %struct.usb_configuration** %5, align 8
  %8 = getelementptr inbounds %struct.usb_configuration, %struct.usb_configuration* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.usb_configuration*, %struct.usb_configuration** %5, align 8
  %13 = getelementptr inbounds %struct.usb_configuration, %struct.usb_configuration* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %6, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @CONFIG_USB_GADGET_VBUS_DRAW, align 4
  store i32 %16, i32* %6, align 4
  br label %17

17:                                               ; preds = %15, %11
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %29

21:                                               ; preds = %17
  %22 = load i32, i32* %4, align 4
  switch i32 %22, label %26 [
    i32 128, label %23
  ]

23:                                               ; preds = %21
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @DIV_ROUND_UP(i32 %24, i32 8)
  store i32 %25, i32* %3, align 4
  br label %29

26:                                               ; preds = %21
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @DIV_ROUND_UP(i32 %27, i32 2)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %26, %23, %20
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @DIV_ROUND_UP(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
